--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         }
       }
     </script>
-    <!-- 
-      IMPORTANT: Ensure 'Directions API', 'Distance Matrix API', and 'Places API' 
-      are ENABLED in your Google Cloud Console for this key.
-    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkmr2ZkRC3SXQI2Py8Q9AdC6KQBdD6FRc&libraries=places,geometry&language=zh-TW&v=weekly"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -39,7 +35,6 @@
       .hide-scrollbar::-webkit-scrollbar { display: none; }
       .hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
       
-      /* Google Maps Autocomplete Dropdown Styling */
       .pac-container {
         border-radius: 1rem;
         border: 1px solid #e2e8f0;
@@ -81,10 +76,9 @@
         margin-top: 0;
       }
 
-      /* Dark mode overrides for PAC container (optional but good for UX) */
       html.dark .pac-container {
-        background-color: #1e293b; /* slate-800 */
-        border-color: #334155; /* slate-700 */
+        background-color: #1e293b;
+        border-color: #334155;
       }
       html.dark .pac-item {
         border-top-color: #334155;
@@ -93,31 +87,32 @@
         background-color: #334155;
       }
       html.dark .pac-item-query {
-        color: #f1f5f9; /* slate-100 */
+        color: #f1f5f9;
       }
       html.dark .pac-matched {
-        color: #60a5fa; /* blue-400 */
+        color: #60a5fa;
       }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@18.3.1",
-    "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.37.0",
     "html-to-image": "https://esm.sh/html-to-image@1.11.11",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.1",
-    "@hello-pangea/dnd": "https://esm.sh/@hello-pangea/dnd@16.6.0?external=react,react-dom",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "@hello-pangea/dnd": "https://esm.sh/@hello-pangea/dnd@16.6.0?deps=react@19.0.0,react-dom@19.0.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
